<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wood5"
    tools:context=".StatisticsActivity">

    <FrameLayout
        android:id="@+id/iv_back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:background="@drawable/circle_bg"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/score"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="4dp"
            android:src="@drawable/ic_back" />

    </FrameLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="50dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_score"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/exo_variablefont_wght"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/best_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_time"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/exo_variablefont_wght"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/best_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Top 3 results"
            android:textSize="30sp"
            android:gravity="bottom|center_horizontal"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/exo_variablefont_wght"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="50dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/best_score_1"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/firs_score_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/best_time_1"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/time_first"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00"
                        android:textSize="30sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/spacer_bg"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/best_score_1"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/second_score_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/best_time_1"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/time_second"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00"
                        android:textSize="30sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/spacer_bg"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/best_score_1"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/third_score_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/best_time_1"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/time_third"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00"
                        android:textSize="30sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="@font/exo_variablefont_wght"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>